--- a/booking.html
+++ b/booking.html
@@ -116,7 +116,7 @@
                 <div class="steps-main">
                     <div class="step-block search-res step-active">
                         <div class="choosen-location">
-                            <p id="header_travel"></p>
+                            <p id="header_travel"><span style="font-size: medium;">We can't find available trips for this date. Please try another search</span></p>
                             <!--                <div class="time">-->
                             <!--                  <input -->
                             <!--                    type="datetime-local"-->
