--- a/index.html
+++ b/index.html
@@ -121,22 +121,22 @@
 				Trusted by established transport operators in the Philippines
 			</h1>
 			<div class="logos">
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/logo_joybus.png" />
 				</a>
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/logogenesistransport.png" />
 				</a>
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/gvflorida_logo.png" />
 				</a>
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/ybllogo.png" />
 				</a>
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/farinaslogo.png" />
 				</a>
-				<a href="joybus.html">
+				<a href="javascript:;">
 					<img alt="" src="assets/images/rorobus.png" />
 				</a>
 			</div>
