--- a/user-admin.html
+++ b/user-admin.html
@@ -25,7 +25,7 @@
             </div>
             <div class="links">
                 <a href="./" onclick="menu()">Home</a>
-                <a href="#" onclick="menu()">About</a>
+                <a href="./#" onclick="menu()">About</a>
                 <a href="./#contact" onclick="menu()">Contact us</a>
                 <div class="status">
                 </div>
@@ -193,6 +193,7 @@
     </script>
 
     <script rel="script" src="assets/js/jquery.min.js?v=10"></script>
+    <script rel="script" src="assets/js/axios.min.js"></script>
     <script rel="script" src="assets/js/table.min.js?v=10"></script>
     <script rel="script" src="assets/js/moment.min.js?v=10"></script>
     <script rel="script" src="assets/js/main.js?v=1675297651996"></script>
