--- a/booking.html
+++ b/booking.html
@@ -7,7 +7,7 @@
     <!-- link css -->
     <link href="assets/css/style.min.css" rel="stylesheet" />
     <link href="assets/css/form.min.css" rel="stylesheet" />
-    <link href="assets/css/booking.css" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1675382861117" rel="stylesheet" />
     <link href="assets/css/buss.min.css" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
@@ -225,7 +225,7 @@
                                         </p>
                                     </div>
                                     <div class="card-icon">
-                                        <img alt="" src="assets/images/gcash.png" />
+                                        <label for="gcash"><img alt="" src="assets/images/gcash.png" /></label> 
                                     </div>
                                 </div>
                             </div>
